[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/GameStatsUI.gd" type="Script" id=1]
[ext_resource path="res://Fonts/MinimalPixelFont.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/StatsBars/Horizontal/Boarders/Boarder7.png" type="Texture" id=3]
[ext_resource path="res://UI/StatsBars/Horizontal/Bars/Bar3.png" type="Texture" id=4]
[ext_resource path="res://UI/StatsBars/Horizontal/Bars/Bar1.png" type="Texture" id=5]
[ext_resource path="res://UI/StatsBars/Horizontal/Bars/Bar5.png" type="Texture" id=6]
[ext_resource path="res://UI/StatsBars/Horizontal/Bars/Bar6.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="GameStatsUI" type="Control"]
margin_left = 5.0
margin_top = 5.0
margin_right = 85.0
margin_bottom = 48.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 91.0
margin_top = 2.0
margin_right = 173.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
text = "Water Pollution: 100%
Air Pollution: 30%
Contamination: 40%
Level Progress: 30%"

[node name="WaterPollutionEmpty" type="TextureRect" parent="."]
margin_left = 4.76837e-07
margin_top = 4.76837e-07
margin_right = 400.0
margin_bottom = 50.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="WaterPollutionFull" type="TextureRect" parent="."]
margin_right = 400.0
margin_bottom = 50.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 2

[node name="WaterPollutionLabel" type="Label" parent="."]
margin_left = 24.0
margin_top = 2.0
margin_right = 83.0
margin_bottom = 16.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Water Pollution"

[node name="AirPollutionEmpty" type="TextureRect" parent="."]
margin_left = 4.76837e-07
margin_top = 11.0
margin_right = 400.0
margin_bottom = 61.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="AirPollutionFull" type="TextureRect" parent="."]
margin_left = 4.76837e-07
margin_top = 11.0
margin_right = 400.0
margin_bottom = 61.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 2

[node name="AirPollutionLabel" type="Label" parent="."]
margin_left = 25.0
margin_top = 13.0
margin_right = 84.0
margin_bottom = 27.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Air Pollution"

[node name="ContaminationEmpty" type="TextureRect" parent="."]
margin_left = 4.76837e-07
margin_top = 22.0
margin_right = 400.0
margin_bottom = 72.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="ContaminationFull" type="TextureRect" parent="."]
margin_left = 4.76837e-07
margin_top = 22.0
margin_right = 400.0
margin_bottom = 72.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 2

[node name="ContaminationLabel" type="Label" parent="."]
margin_left = 26.0
margin_top = 24.0
margin_right = 85.0
margin_bottom = 38.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Contamination"

[node name="LevelProgressEmpty" type="TextureRect" parent="."]
margin_left = 9.53674e-07
margin_top = 33.0
margin_right = 400.0
margin_bottom = 83.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="LevelProgressFull" type="TextureRect" parent="."]
margin_left = 9.53674e-07
margin_top = 33.0
margin_right = 400.0
margin_bottom = 83.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 2

[node name="LevelProgressLabel" type="Label" parent="."]
margin_left = 24.0
margin_top = 35.0
margin_right = 83.0
margin_bottom = 49.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Level Progress"
